Cosmetic fixes to tutorial page and copy.
Make it so the image is not squished, change some paragraphs into
headers, and wordsmith a bit.

(imported from commit 81295e1a8ddd4f1ecd4532c4dfb8a38467bb530e)

--- a/zephyr/static/styles/portico.css
+++ b/zephyr/static/styles/portico.css
@@ -1,5 +1,10 @@
 body {
     font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
+    line-height: 150%;
+}
+
+li {
+    line-height: 150%;
 }
 
 .title {
@@ -56,4 +61,9 @@ a.title:hover {
 .fakecontrol {
     padding-top: 5px;
     font-weight: bold;
+}
+
+img.screenshot{
+    /* This makes it so screenshots are still shown if they are larger than their span.*/
+    max-width: 150%;
 }
